--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -11,7 +11,7 @@
       width: 100%;
       height: 100%;
       background: black;
-      overflow: hidden;  /* keep parent fixed */
+      overflow: hidden;
     }
 
     iframe {
@@ -25,7 +25,7 @@
       opacity: 0;
       transition: opacity 1.5s ease-in-out;
       display: block;
-      pointer-events: auto; /* allow iframe content control */
+      pointer-events: auto;
     }
 
     iframe.visible {
@@ -47,7 +47,7 @@
     const fadeDuration = 1500;
     let showingA = true;
 
-    // Adjust fullscreen on Smart TV
+    // Adjust fullscreen on TV
     function adjustSize() {
       [frameA, frameB].forEach(f => {
         f.style.width  = window.innerWidth  + "px";
@@ -58,7 +58,7 @@
     window.addEventListener("load", adjustSize);
     setInterval(adjustSize, 2000);
 
-    // Flip logic
+    // Swap logic
     function swapFrames() {
       if (showingA) {
         frameB.src = "Banner.html?t=" + Date.now();
@@ -81,38 +81,55 @@
       }
     }
 
-    // 🔹 Enlarge font slightly inside telesales iframe
-    function enlargeFont() {
+    // 🔹 Font & table enlargement + smooth scroll
+    function enhanceDisplay() {
       try {
         const doc = frameA.contentDocument || frameA.contentWindow.document;
         if (!doc) return;
 
-        // avoid adding duplicate style tags
-        if (doc.getElementById("fontBoost")) return;
+        if (!doc.getElementById("enhancer")) {
+          const style = doc.createElement("style");
+          style.id = "enhancer";
+          style.textContent = `
+            html, body {
+              font-size: clamp(22px, 2.8vw + 0.5vh, 64px) !important;
+              line-height: 1.3 !important;
+              overflow-y: auto !important;
+              scroll-behavior: smooth;
+            }
+            table, td, th {
+              font-size: inherit !important;
+              line-height: 1.3em !important;
+            }
+            table.dataTable tbody tr {
+              height: 4.2em !important; /* increase row height a bit */
+            }
+          `;
+          doc.head.appendChild(style);
+        }
 
-        const style = doc.createElement("style");
-        style.id = "fontBoost";
-        style.textContent = `
-          html, body {
-            font-size: 1.3em !important; /* ⬆ increase base font size */
-            line-height: 1.2 !important;
-          }
-          h1, h2, h3, p, td, th, span, div {
-            font-size: 1.3em !important;
-          }
-        `;
-        doc.head.appendChild(style);
+        // Auto-scroll effect
+        const body = doc.querySelector("body");
+        if (body && !body.dataset.autoScrollStarted) {
+          body.dataset.autoScrollStarted = "true";
+          let scrollDir = 1;
+          setInterval(() => {
+            const maxScroll = body.scrollHeight - body.clientHeight;
+            if (body.scrollTop >= maxScroll - 5) scrollDir = -1;
+            else if (body.scrollTop <= 0) scrollDir = 1;
+            body.scrollTop += scrollDir * 1; // adjust 1–3 for speed
+          }, 100); // scroll interval (ms)
+        }
       } catch (err) {
-        console.warn("Font resize skipped (cross-origin):", err);
+        console.warn("Enhancement skipped (cross-origin):", err);
       }
     }
 
-    // Apply font boost regularly (to catch reloads)
-    setInterval(enlargeFont, 4000);
+    // Apply periodically (for reloads)
+    setInterval(enhanceDisplay, 3000);
 
     // Start rotation
     setTimeout(swapFrames, telesalesTime);
   </script>
-
 </body>
 </html>
