--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -107,7 +107,7 @@
     setInterval(updateHeader, 1000);
     updateHeader();
 
-    // --- Flip Timing ---
+    // --- Flip Timing (Persistent) ---
     const beiboraDuration = 300000; // 5 minutes
     const bannerDuration = 15000;   // 15 seconds
     let showingBanner = false;
@@ -117,17 +117,40 @@
         // Switch to Beibora dashboard
         flipper.classList.remove("flip");
         showingBanner = false;
+        localStorage.setItem('lastFlip', Date.now());
         setTimeout(flipCycle, beiboraDuration);
       } else {
         // Switch to Banner
         flipper.classList.add("flip");
         showingBanner = true;
+        localStorage.setItem('lastFlip', Date.now());
         setTimeout(flipCycle, bannerDuration);
       }
     }
 
-    // Start with Beibora showing, flip to Banner after 5 mins
-    setTimeout(flipCycle, beiboraDuration);
+    // Resume timing across refresh
+    const lastFlip = localStorage.getItem('lastFlip');
+    if (lastFlip) {
+      const elapsed = Date.now() - lastFlip;
+      const totalCycle = beiboraDuration + bannerDuration;
+      const modTime = elapsed % totalCycle;
+
+      if (modTime < beiboraDuration) {
+        // Still in Beibora phase
+        flipper.classList.remove("flip");
+        showingBanner = false;
+        setTimeout(flipCycle, beiboraDuration - modTime);
+      } else {
+        // Should be showing Banner
+        flipper.classList.add("flip");
+        showingBanner = true;
+        setTimeout(flipCycle, totalCycle - modTime);
+      }
+    } else {
+      // First load: start with Beibora for 5 minutes
+      localStorage.setItem('lastFlip', Date.now());
+      setTimeout(flipCycle, beiboraDuration);
+    }
   </script>
 
 </body>
